--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.2",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
   },
