--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "jsonp": "^0.2.1",
+    "velocity-animate": "^1.5.0",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^2.6.0",
